--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-hook-form": "^4.6.2",
+    "react-phone-number-input": "^3.0.13",
+    "react-scripts": "3.3.0",
+    "react-text-mask": "^5.4.3",
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
